# MissileTracker

./: .gitignore  CMakeLists.txt  README.md  books.pro  bookwindow.cpp  bookwindow.h  bookwindow.ui  importantReadThis.txt  main.cpp  mycustomdelegate.h  row.cpp  row.h
src/: bookdelegate.cpp
temp/: .~lock.excel.xlsx#  input.xlsx  output.db
